      the preferences dialog, all opened books will automatically be added
      to the library and moved into the collection "Recent". In addition,
      the last read page will be stored and recalled the next time the book
      is opened again.

    - Fixed several malfunctions that could occur if no SQLite library
      was installed.

    - Updated traditional Chinese translation (by Wayne Su).

MComix 0.99
Release date: 14.07.2012

    - Fixed "Go to page" dialog's thumbnail not scaling depending on dialog
      size.

    - Using the mouse wheel to scroll left now correctly advances to the
      next page in manga mode, instead of going back one page. Scrolling right
      has also been fixed.

    - Multiple open instances of MComix no longer overwrite each others'
      bookmarks when closed.

    - Fixed exception when trying to pack an archive using the archive editor.

    - Fixed a bug that prevented using the "Next archive"/"Previous archive"
      buttons when an empty archive was loaded (by Gabriel Falcone).

    - "Smart scrolling" now also works with the mouse wheel. In smart
      scrolling mode, MComix tries to follow the natural reading flow of a
      comic book by not only scrolling up or down, but also sideways.
      Please not that smart scrolling does not work in "Fit to width" or "Best
      fit mode", as there is no need to scroll sideways in these modes.

    - Zoom is now enabled in all fit modes (best fit, fit to width, fit to
      height).

    - Added new zoom mode 'Fit to size'. This mode always stretches an image
      to a given height or width. By default, a height of 1800px is set.
      This can be changed in the preferences dialog.

    - Most confirmation dialogs can now be permanently disabled by activating
      the "Do not ask again" checkbox in each dialog. This action can be
      undone by clicking on "Clear dialog choices" in the preferences dialog.
